// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneSkeletonPrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "주어진 사건 목록을 한 편의 장면으로 옮기되, 아직 살은 붙이지 마라. 이 단계의 결과물은 뒤에서 묘사를 더할 뼈대다.
사건을 순서대로 빠짐없이 담고, 인물이 언제 등장하고 언제 자리를 뜨는지, 장면이 어디서 끝나는지를 분명히 하라.
대사는 실제로 쓸 문장을 따옴표로 빠짐없이 적어라. 사건마다 인물이 무엇을 하고 어떤 말을 주고받는지 구체적으로 담되, 감각 묘사·회상·긴 내면 독백은 넣지 마라. 그것은 다음 단계의 몫이다.
한 인물이 이미 그 자리에 있으면 다시 등장시키지 말고, 이미 벌어진 일은 다시 일으키지 마라.
사건의 정보 순서를 지켜라. 어떤 인물이 한 사건에서 처음 알게 되는 사실은 그 사건에서 처음 드러나야 한다. 앞선 사건에서 이미 알고 있던 것처럼 쓰거나, 아직 듣지 못한 사실을 미리 알게 하지 마라.
입력에 없는 새로운 사건·설정·인물을 지어내지 마라.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라. 단 [입버릇]에 적힌 표현은 예외다. 그 인물의 대사에 입버릇답게 거듭 써라. 한 번 쓰고 말면 입버릇이 아니다.
시간이나 장소가 바뀌는 지점에는 단독 줄에 --- 를 넣어 장면 전환을 표시하라.
설명이나 머리말 없이 뼈대 본문만 한국어로 출력하라.
서술은 과거형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "
[이 장면의 사건]
사건 하나",
}
`;

exports[`SceneSkeletonPrompt golden > leaves optional blocks out for the generic variant 2`] = `
{
  "system": "주어진 사건 목록을 한 편의 장면으로 옮기되, 아직 살은 붙이지 마라. 이 단계의 결과물은 뒤에서 묘사를 더할 뼈대다.
사건을 순서대로 빠짐없이 담고, 인물이 언제 등장하고 언제 자리를 뜨는지, 장면이 어디서 끝나는지를 분명히 하라.
대사는 실제로 쓸 문장을 따옴표로 빠짐없이 적어라. 사건마다 인물이 무엇을 하고 어떤 말을 주고받는지 구체적으로 담되, 감각 묘사·회상·긴 내면 독백은 넣지 마라. 그것은 다음 단계의 몫이다.
한 인물이 이미 그 자리에 있으면 다시 등장시키지 말고, 이미 벌어진 일은 다시 일으키지 마라.
사건의 정보 순서를 지켜라. 어떤 인물이 한 사건에서 처음 알게 되는 사실은 그 사건에서 처음 드러나야 한다. 앞선 사건에서 이미 알고 있던 것처럼 쓰거나, 아직 듣지 못한 사실을 미리 알게 하지 마라.
입력에 없는 새로운 사건·설정·인물을 지어내지 마라.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라. 단 [입버릇]에 적힌 표현은 예외다. 그 인물의 대사에 입버릇답게 거듭 써라. 한 번 쓰고 말면 입버릇이 아니다.
시간이나 장소가 바뀌는 지점에는 단독 줄에 --- 를 넣어 장면 전환을 표시하라.
설명이나 머리말 없이 뼈대 본문만 한국어로 출력하라.
서술은 과거형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "
[이 장면의 사건]
사건 하나",
}
`;

exports[`SceneSkeletonPrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "사건 목록을 장면의 뼈대로 옮겨라. 서술은 과거형, 대사는 곡선 큰따옴표로, 행동은 짧게. 묘사·회상은 넣지 마라. 한국어 본문만 출력.",
  "user": "
[이 장면의 사건]
사건 하나",
}
`;

exports[`SceneSkeletonPrompt golden > leaves optional blocks out for the xs variant 2`] = `
{
  "system": "사건 목록을 장면의 뼈대로 옮겨라. 서술은 과거형, 대사는 곡선 큰따옴표로, 행동은 짧게. 묘사·회상은 넣지 마라. 한국어 본문만 출력.",
  "user": "
[이 장면의 사건]
사건 하나",
}
`;

exports[`SceneSkeletonPrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "주어진 사건 목록을 한 편의 장면으로 옮기되, 아직 살은 붙이지 마라. 이 단계의 결과물은 뒤에서 묘사를 더할 뼈대다.
사건을 순서대로 빠짐없이 담고, 인물이 언제 등장하고 언제 자리를 뜨는지, 장면이 어디서 끝나는지를 분명히 하라.
대사는 실제로 쓸 문장을 따옴표로 빠짐없이 적어라. 사건마다 인물이 무엇을 하고 어떤 말을 주고받는지 구체적으로 담되, 감각 묘사·회상·긴 내면 독백은 넣지 마라. 그것은 다음 단계의 몫이다.
뼈대의 목표 분량: 약 2,500자. 분량은 묘사가 아니라 사건의 밀도로 채운다 — 사건 하나를 다가감·망설임·말·반응·뒷수습처럼 단계로 쪼개고, 주고받는 말을 한두 마디로 끝내지 말고 밀고 당기는 여러 턴으로 늘려라. 짧은 행동 지문과 한 줄 반응은 뼈대의 일부다.
한 인물이 이미 그 자리에 있으면 다시 등장시키지 말고, 이미 벌어진 일은 다시 일으키지 마라.
사건의 정보 순서를 지켜라. 어떤 인물이 한 사건에서 처음 알게 되는 사실은 그 사건에서 처음 드러나야 한다. 앞선 사건에서 이미 알고 있던 것처럼 쓰거나, 아직 듣지 못한 사실을 미리 알게 하지 마라.
입력에 없는 새로운 사건·설정·인물을 지어내지 마라.
[장면 설계]는 이 장면이 무엇을 해내야 하는지 알려 주는 지시다. 그 문장을 본문에 옮겨 적지 말고, 사건을 그 목적·갈등·반전이 드러나도록 풀어써라.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라. 단 [입버릇]에 적힌 표현은 예외다. 그 인물의 대사에 입버릇답게 거듭 써라. 한 번 쓰고 말면 입버릇이 아니다.
시간이나 장소가 바뀌는 지점에는 단독 줄에 --- 를 넣어 장면 전환을 표시하라.
장면은 여기서 닫힌다: 준이 문을 닫고 나간다. 그 뒤에 이어질 일은 다음 장면의 몫이므로 쓰지 마라.
설명이나 머리말 없이 뼈대 본문만 한국어로 출력하라.
앞서 쓴 결과가 다음 이유로 반려됐다. 이번에는 어기지 마라: 인물 재등장 / 종료 지점 초과
서술은 현재형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
장르·톤: 로맨스
이 장면의 시점 인물: 하나 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 냉전 — 이 단계에 맞는 태도와 거리감으로 표현하라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "[이 장면의 확정 사실]
- 사건: 편지가 도착했다
- 장소: 부두 창고
[배경]
비 내리는 부두
낡은 창고
[등장 캐릭터 페르소나]
[하나]
말투: 짧고 단호함
[입버릇]
- 뭐 별거는 아닌데
[준]

[이전 맥락]
둘은 어제 다퉜다.

[장면 설계]
목적: 재회
갈등: 오해

[이 장면의 사건]
1. 하나가 문을 연다
2. 준이 들어온다",
}
`;

exports[`SceneSkeletonPrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "주어진 사건 목록을 한 편의 장면으로 옮기되, 아직 살은 붙이지 마라. 이 단계의 결과물은 뒤에서 묘사를 더할 뼈대다.
사건을 순서대로 빠짐없이 담고, 인물이 언제 등장하고 언제 자리를 뜨는지, 장면이 어디서 끝나는지를 분명히 하라.
대사는 실제로 쓸 문장을 따옴표로 빠짐없이 적어라. 사건마다 인물이 무엇을 하고 어떤 말을 주고받는지 구체적으로 담되, 감각 묘사·회상·긴 내면 독백은 넣지 마라. 그것은 다음 단계의 몫이다.
뼈대의 목표 분량: 약 2,500자. 분량은 묘사가 아니라 사건의 밀도로 채운다 — 사건 하나를 다가감·망설임·말·반응·뒷수습처럼 단계로 쪼개고, 주고받는 말을 한두 마디로 끝내지 말고 밀고 당기는 여러 턴으로 늘려라. 짧은 행동 지문과 한 줄 반응은 뼈대의 일부다.
한 인물이 이미 그 자리에 있으면 다시 등장시키지 말고, 이미 벌어진 일은 다시 일으키지 마라.
사건의 정보 순서를 지켜라. 어떤 인물이 한 사건에서 처음 알게 되는 사실은 그 사건에서 처음 드러나야 한다. 앞선 사건에서 이미 알고 있던 것처럼 쓰거나, 아직 듣지 못한 사실을 미리 알게 하지 마라.
입력에 없는 새로운 사건·설정·인물을 지어내지 마라.
[장면 설계]는 이 장면이 무엇을 해내야 하는지 알려 주는 지시다. 그 문장을 본문에 옮겨 적지 말고, 사건을 그 목적·갈등·반전이 드러나도록 풀어써라.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라. 단 [입버릇]에 적힌 표현은 예외다. 그 인물의 대사에 입버릇답게 거듭 써라. 한 번 쓰고 말면 입버릇이 아니다.
시간이나 장소가 바뀌는 지점에는 단독 줄에 --- 를 넣어 장면 전환을 표시하라.
장면은 여기서 닫힌다: 준이 문을 닫고 나간다. 그 뒤에 이어질 일은 다음 장면의 몫이므로 쓰지 마라.
설명이나 머리말 없이 뼈대 본문만 한국어로 출력하라.
앞서 쓴 결과가 다음 이유로 반려됐다. 이번에는 어기지 마라: 인물 재등장 / 종료 지점 초과
서술은 현재형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
장르·톤: 로맨스
이 장면의 시점 인물: 하나 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 냉전 — 이 단계에 맞는 태도와 거리감으로 표현하라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라. 인물 카드가 입버릇으로 정한 표현은 이 제한의 예외다.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "[이 장면의 확정 사실]
- 사건: 편지가 도착했다
- 장소: 부두 창고
[배경]
비 내리는 부두
낡은 창고
[등장 캐릭터 페르소나]
[하나]
말투: 짧고 단호함
[입버릇]
- 뭐 별거는 아닌데
[준]

[이전 맥락]
둘은 어제 다퉜다.

[장면 설계]
목적: 재회
갈등: 오해

[이 장면의 사건]
1. 하나가 문을 연다
2. 준이 들어온다",
}
`;

exports[`SceneSkeletonPrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "사건 목록을 장면의 뼈대로 옮겨라. 서술은 과거형, 대사는 곡선 큰따옴표로, 행동은 짧게. 묘사·회상은 넣지 마라. 한국어 본문만 출력.",
  "user": "[이 장면의 확정 사실]
- 사건: 편지가 도착했다
- 장소: 부두 창고
[배경]
비 내리는 부두
낡은 창고
[등장 캐릭터 페르소나]
[하나]
말투: 짧고 단호함
[입버릇]
- 뭐 별거는 아닌데
[준]

[이전 맥락]
둘은 어제 다퉜다.

[장면 설계]
목적: 재회
갈등: 오해

[이 장면의 사건]
1. 하나가 문을 연다
2. 준이 들어온다",
}
`;
